Fix responsividad y logueo con google

--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="mobile-styles.css">
-    <link rel="stylesheet" href="css/touch-scroll.css">
+    <link rel="stylesheet" href="css/responsive-optimized.css">
     <link rel="stylesheet" href="css/language-selector.css">
     <link rel="stylesheet" href="css/menu-language.css">
     <link rel="stylesheet" href="css/verification.css">
@@ -35,7 +34,7 @@
                 <span class="fade-in-text">VigiChat</span>
             </div>
             <div class="loading-spinner enhanced-spinner"></div>
-            <p class="loading-text fade-in-delayed">Conectando...</p>
+            <p class="loading-text fade-in-delayed" data-i18n="loading.connecting">Conectando...</p>
             <div class="loading-dots">
                 <span></span><span></span><span></span>
             </div>
